src/pages/home.scss
@import "../common";

.container {
  min-height: 100vh;
  height: 100%;
  position: relative;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background: white;
  z-index: 1000;

  h1 {
    font-family: "Alex Brush";
    font-weight: 400;
    font-size: 3rem;
    text-align: center;
    padding-top: 2.5rem;
  }

  & a {
    text-decoration: none;
    color: black;

    &:visited {
      color: black;
    }

    &:hover {
      color: goldenrod;
    }
  }

  nav {
    ul {
      display: flex;
      justify-content: space-evenly;
      list-style: none;
      border-top: 1px solid lightgrey;
      border-bottom: 1px solid lightgrey;
      padding: 1rem;
    }
  }

  aside {
    display: flex;
    align-items: center;
    width: 100%;
    height: 8vh;
    background-color: $primary-color;
    color: white;
    padding: 2rem;
    font-family: Roboto;
    font-size: 1.5rem;
  }
}

main {
  padding: 0;
  padding-top: 3.75rem;
  padding-bottom: 8rem;
  width: 100%;
  height: 100%;

  .five-tips-intro {
    display: flex;

    figure {
      width: 50%;
      height: 65vh;
      background-color: $primary-color;
      background-image: url("../images/Margo-Hudson-GED-graduate-and-tutor-at-Seeds-of-Literacy.jpg");
      background-size: cover;
      background-position: center 0;
      background-repeat: no-repeat;
    }

    article {
      background-color: $primary-color;
      color: white;
      width: 50%;
      height: 65vh;
      min-height: 350px;

      h1 {
        font-family: Roboto;
        font-size: 3.5rem;
        line-height: 1.5;
        margin: 12rem 0 0 0;
      }

      .drop-cap {
        text-align: center;
        float: left;
        font-family: "Roboto";
        font-size: 19rem;
        line-height: 1;
        margin: -1.5rem 1rem 0.1em -6.5rem;
      }

      a {
        display: block;
        margin-top: 3rem;
        color: white;
        font-family: Roboto;
        font-size: 1.25rem;
        text-align: center;
        text-decoration: none;

        &:hover {
          color: goldenrod;
        }
      }
    }
  }

  .call-to-action {
    color: white;
    background-color: $dark-accent-color;
    display: flex;
    justify-content: space-evenly;
    padding: 1.25rem;

    h2 {
      font-size: 1.25rem;
      font-family: "Roboto";
      text-align: center;
      a {
        color: white;
        text-decoration: none;

        &:hover {
          color: goldenrod;
        }
      }
    }
  }

  .speaker {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 2rem;
    width: 100%;
    min-height: 65vh;
    padding: 2rem;
    padding-bottom: 2rem;

    h1 {
      grid-column: 1 / span 2;
      text-align: center;
      margin-bottom: 2rem;
    }

    article {
      font-family: Roboto;
      width: 100%;
      font-size: 1.25rem;
      line-height: 1.5;
    }

    .life-story {
      grid-row: 2 / span2;

      p {
        margin-bottom: 1rem;
      }

      .read-more {
        display: block;
        margin-top: 1rem;
        text-decoration: none;
      }
    }

    blockquote {
      position: relative;

      figure {
        margin: 0 auto;
        margin-bottom: 2rem;
        width: 100px;
        height: 100px;
        border-radius: 50%;
        background-image: url("../images/pexels-photo-6140710.jpeg");
        background-size: cover;
        background-repeat: no-repeat;
        background-position: 100% 0%;
      }

      p {
        text-align: right;
        font-size: 0.75rem;
      }
    }

    .availability {
      grid-column: 1 / span 2;
      text-align: center;
      font-size: 2rem;
      margin-top: 2rem;

      a {
        text-decoration: none;
        font-family: Roboto;

        &:hover {
          color: goldenrod;
        }
      }
    }
  }
}

footer {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  position: absolute;
  bottom: 0;
  width: 100%;
  min-height: 9rem;
  padding-top: 3rem;
  background-color: $primary-color;
  color: white;
  text-align: center;

  aside {
    position: absolute;
    bottom: 0;
    width: 100%;
    min-height: 2rem;
    padding: 0.5rem;
    padding-top: 0.5rem;
    background-color: $dark-accent-color;
  }
}

@media screen and (max-height: 575px) {
  header {
    position: absolute;
  }
}

@media screen and (min-width: 600px) and (max-height: 850px) {
  .five-tips-intro {
    figure {
      min-height: 500px;
    }
    article {
      min-height: 500px !important;

      h1 {
        margin-left: -10rem !important;
        margin-top: 20vh !important;
      }

      .drop-cap {
        margin: -1.75rem 0 0 5vw !important;
      }
    }
  }
}

@media screen and (max-width: 600px) {
  .five-tips-intro {
    flex-direction: column;

    figure {
      width: 100% !important;
    }

    article {
      width: 100% !important;
      max-height: 45vh !important;

      h1 {
        left: 2rem !important;
        line-height: 1 !important;
        margin: 6rem 4rem 0 0 !important;
        padding: 0;
        font-size: 8vw !important;
        word-wrap: none;

        .drop-cap {
          margin: -1.75rem 0 0 20vw;
          font-size: 10rem;
        }
      }
    }
  }

  .speaker {
    display: block !important;

    blockquote {
      figure {
        margin-top: 2rem !important;
      }
    }
  }
}

@media screen and (max-width: 300px) {
  .drop-cap {
    margin: -1.75rem 0 0 17vw !important;
  }

  footer {
    min-height: 9rem;
    padding-top: 1.5rem;
  }
}

